# myyQTTest

./: CMakeLists.txt  info.cpp  info.cpp.tmp  info.h  main.cpp
note/: note.cpp  note.h
